--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ logs/*
 
 #plugin avatar images
 www/txat/scripts/Txat/addons/avatar/images/avatars/*
+/nbproject/private//nbproject/project.xml
+/nbproject/project.properties
+/nbproject/private/private.properties
+/nbproject/private/private.xml
