--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+# txat
 pass.storage/*
 upref.storage/*
-/logs/*
+logs/*
+
+# plugin avatar storage
 www/txat/scripts/Txat/addons/avatar/images/avatars/*
